<resources>
    <string name="app_name">Annonce86</string>
    <!-- Menu Drawer Strings -->
    <string name="ad">Categories</string>
    <string name="ad_voiture">Voiture</string>
    <string name="ad_moto">Moto</string>
    <string name="ad_pc">Ordinates</string>
    <string name="ad_mobile">Mobile</string>
    <string name="ad_tech">Tech</string>
    <string name="acc">Account</string>
    <string name="acc_login">Login</string>
    <string name="acc_logout">Logout</string>
    <string name="acc_sign">SignUp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Please Login or SignUp!</string>
    <!-- Sign Dialog -->
    <string name="email_reset_password_sent">Password Reset Email Was Sent!</string>
    <string name="dialog_email_reset_message">Type your email for password reset!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_action">Sign me up!</string>
    <string name="log_in">Login</string>
    <string name="log_in_action">Log me in!</string>
    <string name="log_in_error">Login error!</string>
    <string name="log_out">Logout</string>
    <string name="forget_password">Forget Password</string>
    <string name="signup_error">Auth Error!</string>
    <string name="send_verification_email_error">Email Verification Error!</string>
    <string name="send_verification_email_sent">Verification email was sent on your address!</string>
    <!-- Auth -->
    <string name="link_done">Email merged with G!</string>
    <string name="enter_to_g">Email already in use! Sign In to merge!</string>
    <!-- Edit Activity -->
    <string name="select_country">Select country...</string>
    <string name="select_city">Select city...</string>
</resources>